Dec 22, 2000: Bill Adams <bill@evil.inetarena.com>
-New column in the server list to show if you need a password or not. If
 you do a lock icon appears.
-If a Q3A server has all non private-client slots filled, a yellow man
 appears next to the map.  The icon is slightly different for color blind
 people so don't tell me about it unless you are color blind and need the
 difference greater.
-You can press "Insert" and "Delete" to add and delete servers, "Enter"
 or "Return" will connect you to the server.
-Moved the filter selection to the "Server" menu pulldown.
-It still dumps core. :(. There seems to be a reference counting bug
 with the server lists.  If you want to watch it happen, set up a
 "mod contains wfa" filter, update the Q3A ID list, apply the filter, and
 press refresh repeatedly.


Dec 20th 2000: Bill Adams <bill@evil.inetarena.com>
--The filter name now appears in the status bar.
--Version changed to 0.9.6b-beta
--There are still core dumps :(.

Dec 04th 2000: Bill Adams <bill@evil.inetarena.com>
-Added the ability to have multiple filters.  Right now the
 number is set at compile time to 10 (see xqf.h:MAX_SERVER_FILTERS
 if you want to change it).  You can name the filters to 
 whatever you want.  The first filter "None" cannot be changed.
 It is there for a reason (future feature). The last filter selected
 is remembered each time you exit (if you use the menu File->exit).
-Version changed to 0.9.6a-beta

Nov 26th 2000: Bill Adams <bill@evil.inetarena.com>
-Changed a few filter related files to make it easier to
 put in multiple server filters.

Nov 24th 2000: Alex Burger <alex@fragit.net>
-Version changed to XQF 0.9.5a-beta
-Fixed UT launching.  Now passes proper parameters to UT

Nov 18th 2000: Alex Burger <alex@fragit.net>
-Version changed to XQF 0.9.5

Nov 13th 2000: Alex Burger <alex@fragit.net>
-Bug fix to prevent filter buttons from not staying 'pressed' after doing a
 refresh.  Thanks to slashdev for the fix.
-Now requires QStat 2.4a
